disable flex on mobile to fix layout bug (authors)

--- a/source/_sass/_custom.scss
+++ b/source/_sass/_custom.scss
@@ -232,3 +232,17 @@
     box-shadow: none;
   }
 }
+
+/* fix mobile layout bug */
+@media only screen
+and (max-width: 799px) {
+
+  .featured-authors {
+    display: block;
+    text-align: center;
+    &__list-item {
+      flex: unset;
+    }
+  }
+
+}
